hw_2/pod.yml
apiVersion: v1
kind: Pod
metadata:
    name: homework-2
    labels:
        app: health-check-app
spec:
    containers:
        - name: health-check-app
          image: fanyshu/otus-arch-hw-1:latest
          ports:
            - containerPort: 8000
