hw_2/service.yml
apiVersion: v1
kind: Service

metadata:
  name: my-app-service

spec:
  selector:
    app: my-app

  ports:
  - port: 8000
    targetPort: web
  type: NodePort
