hw_2/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  rules:
  - host: my.app
    http:
      paths:
      - backend:
          serviceName: my-app-services
          servicePort: 8000
        path: /otusapp(/|$)(.*)
